--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express-rate-limit": "^7.1.5",
+    "helmet": "^7.1.0"
   },
   "license": "CC-BY-NC-4.0"
 }
